mobile header visibility fix

--- a/style/main.css
+++ b/style/main.css
@@ -149,7 +149,7 @@ p {
 
 /** Mobile Header */
 
-.mobileHeader {
+.mobileHeaderMain {
 	display: none;
 }
 
